[package]
name = "acer-rgb"
version = "0.1.0"
edition = "2021"
authors = ["musicalskele"]
description = "a short script that manages rgb keyboards on acer laptops. for details see here: https://github.com/JafarAkhondali/acer-predator-turbo-and-rgb-keyboard-linux-module"
categories = ["command-line-utilities"]
repository = "https://github.com/musicalskele/acer-keyboard-rgb"
license-file = "LICENSE"
#[profile.release]
#strip = true
#lto = true
#may use these however the binary size is managable for now. 

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
color-eyre = "0.6"
dirs = "5.0.1"
thiserror = "1.0.64"
dialoguer = "0.11.0"